@@ -54,11 +54,6 @@ function instrumentationS3 (orig, origArguments, request, AWS, agent, { version,
 
   const ins = agent._instrumentation
 
-  // `instrumentationS3` is called *synchronously* for an S3 client method call.
-  // We must use `ins.createSpan` rather than `ins.startSpan`, otherwise we
-  // would impact apm.currentSpan in the calling code. For example:
-  //      s3Client.listBuckets({}, function (...) { ... })
-  //      // The "S3 ListBuckets" span should *not* be apm.currentSpan here.
   const span = ins.createSpan(name, TYPE, SUBTYPE, opName)
   if (!span) {
     return orig.apply(request, origArguments)
