@@ -1,3 +1,5 @@
+'use strict'
+
 const constants = require('../../../constants')
 
 const TYPE = 'messaging'
@@ -105,16 +107,13 @@ function shouldIgnoreRequest (request, agent) {
 }
 
 function instrumentationSns (orig, origArguments, request, AWS, agent, { version, enabled }) {
-  const type = TYPE
-  const subtype = SUBTYPE
-  const action = ACTION
-
   if (shouldIgnoreRequest(request, agent)) {
     return orig.apply(request, origArguments)
   }
 
+  const ins = agent._instrumentation
   const name = getSpanNameFromRequest(request)
-  const span = agent.startSpan(name, type, subtype, action)
+  const span = ins.createSpan(name, TYPE, SUBTYPE, ACTION)
   if (!span) {
     return orig.apply(request, origArguments)
   }
@@ -122,19 +121,23 @@ function instrumentationSns (orig, origArguments, request, AWS, agent, { version
   span.setDestinationContext(getMessageDestinationContextFromRequest(request))
   span.setMessageContext(getMessageContextFromRequest(request))
 
-  request.on('complete', function (response) {
+  const onComplete = function (response) {
     if (response && response.error) {
-      const errOpts = {
-        skipOutcome: true
-      }
-      agent.captureError(response.error, errOpts)
-      span._setOutcomeFromErrorCapture(constants.OUTCOME_FAILURE)
+      agent.captureError(response.error)
     }
-
     span.end()
-  })
+  }
+  // Bind onComplete to the span's run context so that `captureError` picks
+  // up the correct currentSpan.
+  const parentRunContext = ins.currRunContext()
+  const spanRunContext = parentRunContext.enterSpan(span)
+  request.on('complete', ins.bindFunctionToRunContext(spanRunContext, onComplete))
 
-  return orig.apply(request, origArguments)
+  const cb = origArguments[origArguments.length - 1]
+  if (typeof cb === 'function') {
+    origArguments[origArguments.length - 1] = ins.bindFunctionToRunContext(parentRunContext, cb)
+  }
+  return ins.withRunContext(spanRunContext, orig, request, ...origArguments)
 }
 
 module.exports = {
