@@ -1,6 +1,8 @@
 'use strict'
+
 const { URL } = require('url')
 const constants = require('../../../constants')
+
 const OPERATIONS_TO_ACTIONS = {
   deleteMessage: 'delete',
   deleteMessageBatch: 'delete_batch',
@@ -145,11 +147,10 @@ function instrumentationSqs (orig, origArguments, request, AWS, agent, { version
     return orig.apply(request, origArguments)
   }
 
-  const type = TYPE
-  const subtype = SUBTYPE
+  const ins = agent._instrumentation
   const action = getActionFromRequest(request)
   const name = getSpanNameFromRequest(request)
-  const span = agent.startSpan(name, type, subtype, action)
+  const span = ins.createSpan(name, TYPE, SUBTYPE, action)
   if (!span) {
     return orig.apply(request, origArguments)
   }
@@ -157,13 +158,9 @@ function instrumentationSqs (orig, origArguments, request, AWS, agent, { version
   span.setDestinationContext(getMessageDestinationContextFromRequest(request))
   span.setMessageContext(getMessageContextFromRequest(request))
 
-  request.on('complete', function (response) {
+  const onComplete = function (response) {
     if (response && response.error) {
-      const errOpts = {
-        skipOutcome: true
-      }
-      agent.captureError(response.error, errOpts)
-      span._setOutcomeFromErrorCapture(constants.OUTCOME_FAILURE)
+      agent.captureError(response.error)
     }
 
     span.end()
@@ -171,9 +168,18 @@ function instrumentationSqs (orig, origArguments, request, AWS, agent, { version
     if (request.operation === 'receiveMessage' && response && response.data) {
       recordMetrics(getQueueNameFromRequest(request), response.data, agent)
     }
-  })
+  }
+  // Bind onComplete to the span's run context so that `captureError` picks
+  // up the correct currentSpan.
+  const parentRunContext = ins.currRunContext()
+  const spanRunContext = parentRunContext.enterSpan(span)
+  request.on('complete', ins.bindFunctionToRunContext(spanRunContext, onComplete))
 
-  return orig.apply(request, origArguments)
+  const cb = origArguments[origArguments.length - 1]
+  if (typeof cb === 'function') {
+    origArguments[origArguments.length - 1] = ins.bindFunctionToRunContext(parentRunContext, cb)
+  }
+  return ins.withRunContext(spanRunContext, orig, request, ...origArguments)
 }
 
 module.exports = {
