@@ -39,6 +39,12 @@ Notes:
 [float]
 ===== Bug fixes
 
+* Fixes for run context handling for 'aws-sdk' instrumentation (S3, SQS, SNS)
+  so that a span created after an AWS client command (in the same tick, in
+  the command callback, or promise) is not a child of the automatic AWS
+  span. This change also ensures captured errors from failing client commands
+  are a child of the AWS span.
+
 * Fixes for 'ioredis' instrumentation ({pull}2460[#2460]):
 +
 **  Fix run-context so that a span created in the same tick as an ioredis
